# Midterm-Hub

./: .gitignore  DEPLOY.md  README.md  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: pages.yml  test.yml
civic/: __init__.py  cli.py  config.py  db.py  ids.py  intake.py  models.py  store.py
civic/adapters/: __init__.py
civic/exports/: __init__.py  csv_export.py  ics_export.py  json_export.py
civic/site/: __init__.py  art.py  base.py  build.py  components.py  copy.py  data.py  icons.py  ogcards.py  pages.py  render.py  seo.py
civic/site/assets/: site.js  styles.css
intake/: 2026-statewide.yaml  README.md
scripts/: build-site.sh
seed/: sources.yaml
tests/: conftest.py  test_exports.py  test_ids.py  test_intake.py  test_models.py  test_site_build.py  test_site_data.py  test_store.py
tests/fixtures/: sample_intake.yaml
