[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "civic-calendar-engine"
version = "0.1.0"
description = "Curation-first U.S. off-cycle election calendar data pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.9.2",
    "typer==0.12.5",
    "click==8.1.7",
    "httpx==0.27.2",
    "tenacity==8.5.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "icalendar==6.1.0",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3"]

[project.scripts]
civic = "civic.cli:main"

[tool.setuptools]
packages = ["civic", "civic.adapters", "civic.exports", "civic.site"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
